--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "e-library",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://dmitriykodenskiy.github.io/e-library/",
   "dependencies": {
     "@apollo/client": "^3.7.4",
     "@reduxjs/toolkit": "^1.9.3",
@@ -23,6 +24,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -43,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
