--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.3.4",
     "contentstack": "^3.16.1",
     "graphql": "^16.6.0",
+    "html-react-parser": "^3.0.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-read-more-read-less": "^1.0.7",
